Added checkout component and functionto render a new page.

--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -12,5 +12,14 @@
     border-width: 2px;
     padding: 10px 10px;
     margin-bottom: 8px;
+    font-size: 12px;
     
+}
+.checkout {
+    border: solid rgb(244, 185, 97);
+    border-width: 2px;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 8px;
+    margin-left: 15px;
+    font-size: 15px;
 }
