--- a/src/Components/Cymbals/Cymbals.css
+++ b/src/Components/Cymbals/Cymbals.css
@@ -62,3 +62,13 @@ color: #ced4da;
 .cymbal__specs {
     font-size: 21px;
 }
+.image {
+width: 10%;
+height: 10px;
+margin: 1rem;
+object-fit: contain;
+image-resolution: 2;
+top: 0px;
+left: 0px;
+bottom: 4rem;
+}
