Added code that doesn't work.

--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -15,7 +15,7 @@
     font-size: 12px;
     
 }
-.checkout {
+.checkout__btn {
     border: solid rgb(244, 185, 97);
     border-width: 2px;
     padding: 10px 10px 10px 10px;
