--- a/src/Components/Orders/Orders.css
+++ b/src/Components/Orders/Orders.css
@@ -11,8 +11,8 @@
     border: solid rgb(244, 185, 97);
     border-width: 2px;
     padding: 10px 10px;
-    margin-bottom: 8px;
-    font-size: 12px;
+    margin-top: 19px;
+    font-size: 15px;
     
 }
 .checkout {
